<resources>
    <string name="app_name">Consultant</string>
    <string name="alert_title_success">Thành công</string>
    <string name="text_dialog_ok">Đồng ý</string>
    <string name="text_cancel">Hủy</string>
    <string name="alert_title_confirm">Xác nhận</string>
    <string name="alert_title_error">Có lỗi xảy tra</string>
    <string name="alert_title_inform">Thông báo</string>
    <string name="text_no_internet_connection">Không có kết nối mạng, vui lòng kiểm tra kết nối mạng và thử lại</string>
    <string name="text_cannot_connect_to_server">Không thể kết nối với máy chủ</string>
    <string name="text_error">Có lỗi xảy ra trong quá trình xử lý.</string>
    <string name="text_processing">Đang tải...</string>
    <string name="profile_logout_confirm">Bạn có thực sự muốn đăng xuất không?</string>
    <string name="text_validate_require_field_email">Email không được để trống</string>
    <string name="text_validate_email_invalid">Email không đúng định dạng</string>
    <string name="text_validate_require_field_password">Mật khẩu không được để trống</string>
    <string name="text_validate_require_field_confirm_password">Xác nhận mật khẩu không được để trống</string>
    <string name="change_password_error_new_password_not_equal">Mật khẩu và mật khẩu xác nhận không giống nhau</string>
    <string name="text_validate_require_field_name">Tên không được để trống</string>
    <string name="text_validate_require_field_phone">Số điện thoại không được để trống</string>
    <string name="text_validate_phone_invalid">Số điện thoại không đúng định dạng</string>
    <string name="text_validate_birth_day">Ngày sinh không được để trống</string>
    <string name="text_validate_id_number">Số CMTND không được để trống</string>
    <string name="text_validate_require_field_old_password">Mật khẩu cũ không được để trống</string>
    <string name="text_validate_require_field_new_password">Mật khẩu mới không được để trống</string>
    <string name="text_validate_require_field_new_confirm_password">Xác nhận mật khẩu mới không được để trống</string>
    <string name="text_validate_require_field_content">Nội dung không được để trống</string>
    <string name="text_validate_require_field_address">Địa chỉ không được để trống</string>

    // base field
    <string name="input_text_email">Nhập email</string>
    <string name="input_text_password">Nhập mật khẩu</string>
    <string name="log_out">Thoát</string>
    <string name="log_in">Đăng nhập</string>

    //screen login activity
    <string name="text_login_fast_access">Truy cập nhanh</string>
    <string name="text_login_developers">đơn vị\nphát triển</string>
    <string name="text_login_partner">Hợp tác \nđối tác</string>
    <string name="text_login_customers">Khách hàng \nbất động sản</string>
    <string name="text_login_consultants">Chuyên viên \ntư vấn</string>
    <string name="text_login_investors">Nhà \nđầu tư</string>
    <string name="text_login_log_in_now">Đăng nhập ngày</string>
    <string name="text_login_forgot_password">Quên mật khẩu?</string>
    <string name="text_login_register">Đăng ký</string>

    // screen navigator home.
    <string name="txt_nav_profile">Hồ sơ cá nhân</string>
    <string name="txt_nav_system_utility">Tiện ích hệ thống</string>
    <string name="txt_nav_account_information">Thông tin tài khoản</string>
    <string name="txt_nav_transaction_history">Lịch sử giao dịch</string>
    <string name="txt_nav_customer_management">Quản lý khách hàng ký gửi</string>
    <string name="txt_nav_warehouse_real_estate">kho hàng bất động sản</string>
    <string name="txt_nav_table_of_goods">Bảng hàng online</string>
    <string name="txt_nav_education_training">Huấn luyện - đào tạo</string>
    <string name="txt_nav_prerogative">Đặc quyền nghề tư vấn</string>
    <string name="txt_nav_news">Tin tức</string>
    <string name="txt_nav_partner">Đối tác</string>

    // kho hang bat dong san
    <string name="txt_warehouse_real_estate_view_detail">Xem chi tiết</string>
    <string name="txt_warehouse_real_estate_view_table_of_goods">Xem bảng hàng</string>

    <string name="txt_project_table_info">Thông tin dự án</string>
    <string name="txt_project_table_investor">Chủ đầu tư</string>
    <string name="txt_project_table_sales_policy">Chính sách bán hàng</string>
    <string name="txt_project_table_model_house">Nhà mẫu 3D</string>
    <string name="txt_project_table_utilities">Tiện ích dự án</string>
    <string name="txt_project_table_support">Hỗ trợ dự án</string>

    // chi tiết của 1 dự án

    <string name="txt_project_utilities_set_calendar">Đặt lịch \nthăm quan nhà mẫu</string>
    <string name="txt_project_utilities_check_table_of_goods">Check \nbảng hàng online</string>
    <string name="txt_project_utilities_bank_interest">Tính Lãi vay \nngân hàng</string>
    <string name="txt_project_utilities_payment">Tính \ntiền độ nộp tiền</string>


    <string name="txt_money">VND</string>
    <string name="txt_moth">Tháng</string>
    <string name="txt_day">Ngày</string>
    <string name="txt_year">%/Năm</string>





    <string name="title_screen_news">Tin tức chung</string>
    <string name="title_screen_partner">Đối tác</string>
    <string name="text_partner_price">%s USD</string>

    <string name="text_investor">Chủ đầu tư</string>
    <string name="text_consultants">Chuyên viên tư vấn</string>
    <string name="text_bank">Ngần hàng</string>
    <string name="text_general_news">Tin tức chung</string>
    <string name="text_news_open_sale">Tin mở bán</string>
    <string name="text_event_news">Tin sự kiện</string>
    <string name="text_tab_news_info">Thông tin</string>
    <string name="text_tab_news_comment">Bình luận</string>
    <string name="discussion_training_course_detail_news_comment_placeholder">Nhập nội dung bình luận</string>
    <string name="title_screen_reply_create_discussion">Bình luận</string>
    <string name="discussion_training_course_detail_comment_successfully">Gửi email thành công</string>
    <string name="title_action_bar_contact">Liên hệ</string>

    <string name="title_action_bar_home">Trang chủ</string>


    <string name="text_news_total_feedback">%s Phản hồi</string>
    <string name="text_post_comment_successfull">Gửi bình luận thành công!</string>
    <string name="text_forgot_password_send_email">Gửi Email</string>
    <string name="text_forgot_passwrord_successfull">Gửi Email thành công. vui lòng kiểm tra email!</string>
    <string name="profile_info_account">Cập nhật thông tin</string>
    <string name="profile_change_password">Đổi mật khẩu</string>
    <string name="profile_history_transactions">Lịch sử giao dịch</string>
    <string name="update_information_successfull">Cập thông tin tài khoản thành công!</string>
    <string name="change_password_successfull">Đổi mật khẩu thành công!</string>
    <string name="contact_email_successfull">Gửi liên hệ thành công!</string>
    <string name="change_image_select_file">Chọn ảnh</string>
    <string name="change_image_title">Đổi ảnh đại diện</string>
    <string name="change_image_camera">Sử dụng máy ảnh</string>
    <string name="change_image_gallery">Sử dụng thư viện ảnh</string>
    <string name="text_tab_education_register">Đăng ký</string>
    //payment gateways
    <string name="text_pay_full_name"> &lt;b>Họ và tên:&lt;/b> %s</string>
    <string name="text_pay_address">&lt;b>Địa chỉ:&lt;/b> %s</string>
    <string name="text_pay_cmtnd">&lt;b>Số CMTND:&lt;/b> %s</string>
    <string name="text_pay_phone">&lt;b>Số ĐT:&lt;/b> %s</string>
    <string name="text_pay_email">&lt;b>Email:&lt;/b> %s</string>
    <string name="text_pay_price">&lt;b>Sô tiền học:&lt;/b> %s</string>
</resources>
